правки в запросах + фикс свагера + изменен формат данных у новостей и аниме
