# service-news/docs/swagger.json
@@ -57,7 +57,7 @@
             }
         },
         "/news.create": {
-            "get": {
+            "post": {
                 "description": "Create news and return it",
                 "consumes": [
                     "application/json"
@@ -69,49 +69,19 @@
                 "operationId": "create-news",
                 "parameters": [
                     {
+                        "description": "news body",
+                        "name": "news",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/handlers.news"
+                        }
+                    },
+                    {
                         "type": "string",
                         "description": "service version",
                         "name": "v",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "title",
-                        "name": "title",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "annotation",
-                        "name": "annotation",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "body news",
-                        "name": "body",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "preview",
-                        "name": "preview",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "background",
-                        "name": "background",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "news types",
-                        "name": "types",
                         "in": "query"
                     },
                     {
@@ -205,7 +175,7 @@
                     {
                         "type": "string",
                         "description": "news id",
-                        "name": "news",
+                        "name": "news_id",
                         "in": "query",
                         "required": true
                     }
@@ -312,26 +282,12 @@
                 "accessToken": {
                     "type": "string"
                 },
-                "annotation": {
-                    "type": "string"
-                },
-                "background": {
-                    "type": "string"
-                },
-                "body": {
-                    "type": "string"
-                },
                 "id": {
                     "type": "string"
                 },
-                "preview": {
-                    "type": "string"
-                },
-                "title": {
-                    "type": "string"
-                },
-                "types": {
-                    "type": "string"
+                "news": {
+                    "type": "object",
+                    "$ref": "#/definitions/handlers.news"
                 },
                 "version": {
                     "description": "API version",
@@ -344,6 +300,35 @@
             "properties": {
                 "alive": {
                     "type": "boolean"
+                }
+            }
+        },
+        "handlers.news": {
+            "type": "object",
+            "required": [
+                "annotation",
+                "body",
+                "preview",
+                "title"
+            ],
+            "properties": {
+                "annotation": {
+                    "type": "string"
+                },
+                "background": {
+                    "type": "string"
+                },
+                "body": {
+                    "type": "string"
+                },
+                "preview": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "types": {
+                    "type": "string"
                 }
             }
         },
